bug no. 7797
SVN-Revision: 14186